// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it works as h1 1`] = `
.c0 {
  font-size: 3rem;
  font-weight: 400;
  font-family: Montserrat,sans-serif;
  line-height: 1.25;
  -webkit-letter-spacing: 0.025em;
  -moz-letter-spacing: 0.025em;
  -ms-letter-spacing: 0.025em;
  letter-spacing: 0.025em;
  color: #292B3E;
}

<h1
  className="c0"
>
  H1
</h1>
`;

exports[`it works as h2 1`] = `
.c0 {
  font-size: 2.25rem;
  font-weight: 400;
  font-family: Montserrat,sans-serif;
  line-height: 1.25;
  -webkit-letter-spacing: 0.025em;
  -moz-letter-spacing: 0.025em;
  -ms-letter-spacing: 0.025em;
  letter-spacing: 0.025em;
  color: #292B3E;
}

<h2
  className="c0"
>
  H2
</h2>
`;

exports[`it works as h3 1`] = `
.c0 {
  font-size: 1.875rem;
  font-weight: 400;
  font-family: Montserrat,sans-serif;
  line-height: 1.25;
  -webkit-letter-spacing: 0.025em;
  -moz-letter-spacing: 0.025em;
  -ms-letter-spacing: 0.025em;
  letter-spacing: 0.025em;
  color: #292B3E;
}

<h3
  className="c0"
>
  H3
</h3>
`;

exports[`it works as h4 1`] = `
.c0 {
  font-size: 1.5rem;
  font-weight: 400;
  font-family: Montserrat,sans-serif;
  line-height: 1.25;
  -webkit-letter-spacing: 0.025em;
  -moz-letter-spacing: 0.025em;
  -ms-letter-spacing: 0.025em;
  letter-spacing: 0.025em;
  color: #292B3E;
}

<h4
  className="c0"
>
  H4
</h4>
`;

exports[`it works as h5 1`] = `
.c0 {
  font-size: 1.25rem;
  font-weight: 400;
  font-family: Montserrat,sans-serif;
  line-height: 1.25;
  -webkit-letter-spacing: 0.025em;
  -moz-letter-spacing: 0.025em;
  -ms-letter-spacing: 0.025em;
  letter-spacing: 0.025em;
  color: #292B3E;
}

<h5
  className="c0"
>
  H5
</h5>
`;

exports[`it works as h6 1`] = `
.c0 {
  font-size: 1.125rem;
  font-weight: 400;
  font-family: Montserrat,sans-serif;
  line-height: 1.25;
  -webkit-letter-spacing: 0.025em;
  -moz-letter-spacing: 0.025em;
  -ms-letter-spacing: 0.025em;
  letter-spacing: 0.025em;
  color: #292B3E;
}

<h6
  className="c0"
>
  H6
</h6>
`;
